# DATACON_2026

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-visual.txt  requirements-web.txt  requirements.txt
app/: __init__.py  main.py
app/services/: jobs.py
app/templates/: base.html  index.html  metrics.html  realtime.html
datacon_agent/: agent.py  batch.py  cli.py  domains.py  download.py  evidence_agents.py  metrics.py  normalize.py  pdf.py  schema.py  scraper_context.py  web.py
docs/: agent_checker.md  chemx_domain_sweep.md  chemx_mistral_check.md  hackathon_bench_run.md  hf_full_bench_run.md  multi_agent_chemical_pipeline.md  ocr_scraper_chemical_ocr_architecture.md  scraper.md  system_architecture.md
runs/chemx-check/: article_d2ra.txt  article_intechopen.txt  article_s13065.txt  article_s41598.txt  articles_benzimidazole_downloaded.txt  metrics_benzimidazole_mistral_scraper_noreview_4pdf.csv  metrics_benzimidazole_single_agent_datacon.csv  metrics_benzimidazole_single_agent_same4.csv  metrics_benzimidazole_tableplanner_only.csv  metrics_benzimidazole_tableplanner_raw_column_bacteria.csv  metrics_mistral_d2ra_noreview.csv  metrics_mistral_intechopen_noreview.csv  metrics_mistral_s13065_noreview.csv  (+11 more)
tests/: test_app_jobs.py  test_datacon_agent.py  test_datacon_evidence_agents.py  test_datacon_metrics.py  test_datacon_normalize.py  test_datacon_schema.py  test_datacon_scraper_context.py  test_model_config.py  test_normalize.py  test_specialized_agents.py
(+32 files in other folders)
