[project]
name = "datacon-agent"
version = "0.1.0"
description = "Schema-driven chemical information extraction agent for DataCon'26 ChemX tasks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.90.0",
  "pandas>=2.2.0",
  "pymupdf>=1.24.0",
  "pillow>=10.4.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.0",
  "tqdm>=4.66.0",
]

[project.optional-dependencies]
eval = [
  "datasets>=2.19.0",
  "numpy>=1.26.0",
  "rdkit>=2024.3.1",
]
web = [
  "streamlit>=1.36.0",
]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
datacon-agent = "datacon_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
